--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -6,7 +6,7 @@
       <div class="ui container" style="flex: 0 1 40%">
         <h1 class="ui mini inverted header">
             <div class="content logo_text">
-            inveriKs
+            InveriuS
             </div>
             <div class="sub header" style="font-size:0.7em;">
               <i>Empieza a asegurar tu futuro desde ya. Accede a las mejores oportunidades en inversion inmobiliaria desde <b>hoy</b>.</i>
