--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>inveriKs</title>
+    <title>InveriuS</title>
     <%= csrf_meta_tags %>
     <%= yield :view_specific_css %>
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
@@ -12,7 +12,7 @@
   <body>
     <div class="ui top fixed inverted big menu" id="menu_header">
       <div class="ui container" id="menu_container">
-        <%= link_to('inveriKs', root_path, class: 'borderless item', id: 'logo') %>
+        <%= link_to('InveriuS', root_path, class: 'borderless item', id: 'logo') %>
         <div class="right menu">
           <%= link_to('inicio', root_path, class: 'item') %>
           <%= link_to('nosotros', root_path, class: 'item') %>
