Preapproval checkbox style

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
           <%= link_to('nosotros', root_path, class: 'item') %>
           <%= link_to('servicios', root_path, class: 'item') %>
           <%= link_to('contacto', root_path, class: 'item') %>
-          <%= link_to(root_path, class: 'item') do %>
+          <%= link_to(new_prospect_path, class: 'item') do %>
           <strong>INVIERTE</strong>
           <% end %>
         </div>
