--- a/app/views/prospects/index.html.erb
+++ b/app/views/prospects/index.html.erb
@@ -2,16 +2,16 @@
 
 <h1>Prospects</h1>
 
-<table>
+<table class="ui celled table">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Last name</th>
-      <th>Rut</th>
-      <th>Cellphone</th>
+      <th>Nombre</th>
+      <th>Apellidos</th>
+      <th>RUT</th>
+      <th>Teléfono</th>
       <th>Email</th>
-      <th>Salary</th>
-      <th>Preapproval</th>
+      <th>Rango de renta</th>
+      <th>Preaprobación</th>
       <th colspan="3"></th>
     </tr>
   </thead>
