Nombre -> Nombres in prospects index

--- a/app/views/prospects/index.html.erb
+++ b/app/views/prospects/index.html.erb
@@ -5,7 +5,7 @@
 <table class="ui celled table">
   <thead>
     <tr>
-      <th>Nombre</th>
+      <th>Nombres</th>
       <th>Apellidos</th>
       <th>RUT</th>
       <th>Teléfono</th>
