--- a/app/assets/stylesheets/prospects.scss
+++ b/app/assets/stylesheets/prospects.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the Prospects controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.form-container {
+	width: 40%;
+	margin-left: 30%;
+	margin-top: 100px;
+}
