--- a/app/views/prospects/index.html.erb
+++ b/app/views/prospects/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Prospects</h1>
 
-<table class="ui celled table">
+<table class="ui sortable celled table">
   <thead>
     <tr>
       <th>Nombres</th>
@@ -11,7 +11,8 @@
       <th>Teléfono</th>
       <th>Email</th>
       <th>Rango de renta</th>
-      <th>Preaprobación</th>
+      <th>Pre-aprobación</th>
+      <th>Fecha creación</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -26,9 +27,8 @@
         <td><%= prospect.email %></td>
         <td><%= prospect.salary %></td>
         <td><%= prospect.preapproval %></td>
-        <td><%= link_to 'Show', prospect %></td>
-        <td><%= link_to 'Edit', edit_prospect_path(prospect) %></td>
-        <td><%= link_to 'Destroy', prospect, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= prospect.created_at %></td>
+        <td class="selectable negative center aligned"><%= link_to 'Eliminar', prospect, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -37,3 +37,9 @@
 <br>
 
 <%= link_to 'New Prospect', new_prospect_path %>
+
+<script type="text/javascript">
+  $( document ).ready(function() {
+    $('table').tablesort();
+  });
+</script>
