Prospects table margin

--- a/app/views/prospects/index.html.erb
+++ b/app/views/prospects/index.html.erb
@@ -1,8 +1,8 @@
-<p id="notice"><%= notice %></p>
+<h1 style="width: 95%; margin-left: 2.5%; margin-top: 80px;">Prospects</h1>
 
-<h1>Prospects</h1>
+<p id="notice" style="width: 95%; margin-left: 2.5%;""><%= notice %></p>
 
-<table class="ui sortable celled table">
+<table class="ui sortable celled table" style="width: 95%; margin-left: 2.5%;">
   <thead>
     <tr>
       <th>Nombres</th>
@@ -35,8 +35,6 @@
 </table>
 
 <br>
-
-<%= link_to 'New Prospect', new_prospect_path %>
 
 <script type="text/javascript">
   $( document ).ready(function() {
