--- a/app/views/prospects/_form.html.erb
+++ b/app/views/prospects/_form.html.erb
@@ -54,7 +54,7 @@
 
     <div class="ui checkbox">
       <input type="checkbox" name="prospect[preapproval]">
-      <label>Pre-aprobación</label>
+      <label>¿Cuentas con pre-aprobación bancaria?</label>
     </div>
   </div>
 
