--- a/app/assets/stylesheets/prospects.scss
+++ b/app/assets/stylesheets/prospects.scss
@@ -5,7 +5,7 @@
 .form-container {
 	width: 40%;
 	margin-left: 30%;
-	margin-top: 100px;
+	padding-top: 100px;
 }
 .negative a:hover {
 	background-color: #ffe7e7 !important;
