--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -9,7 +9,7 @@
               InveriuS
               </div>
               <div class="sub header text">
-                <i>Empieza a asegurar tu futuro desde ya. Accede a las mejores oportunidades en inversion inmobiliaria desde <b>hoy</b>.</i>
+                <i>Invertir en propiedades es <b>facil, rápido</b> y <b>seguro</b></i>
               </div>
             </h1>
         </div>
@@ -36,7 +36,7 @@
               InveriuS
               </div>
               <div class="sub header text">
-                <i>Despreocúpate y deja tu inversión a <b>expertos</b> inmobiliarios.</i>
+                <i>Nuestra experiencia hace la diferencia. Que no te engañen, asesórate <b>sin comisión</b></i>
               </div>
             </h1>
         </div>
@@ -63,7 +63,7 @@
               InveriuS
               </div>
               <div class="sub header text">
-                <i>Asesórate, decide e <b>invierte</b>.</i>
+                <i>Desde solo <b>$5990 diarios</b>, puedes transformarte en un inversionista</i>
               </div>
             </h1>
         </div>
@@ -81,7 +81,7 @@
       </div>
     </div>
   </div>
-  <div class="ui fluid container background-holder fourth">
+<!--   <div class="ui fluid container background-holder fourth">
     <div class="ui fluid container items-holder">
       <div class="ui container items-container">
         <div class="ui container items-left">
@@ -107,7 +107,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 </div>
 <!-- HEADER_CONTAINER -->
 
@@ -206,10 +206,9 @@
   <div class="ui fluid container items-holder">
     <div class="ui container items-container">
       <div class="ui basic segment items-center" id="quotes">
-        <p><i class="quote left big icon"></i>Mi empresa es terrible bacán, así que invierte ahora o calla para siempre.<br><br><i class="signature">Felipe Herrera</i></p>
-        <p><i class="quote left big icon"></i>Estoy de acuerdo, ponte vio<br><br><i class="signature">Benjamín Musalem</i></p>
-        <p><i class="quote left big icon"></i>Yo también, suelta las moneas<br><br><i class="signature">Raimundo Herrera</i></p>
-        <p><i class="quote left big icon"></i>De todas maneras, pone cualquier billete<br><br><i class="signature">Javier López</i></p>
+        <p><i class="quote left big icon"></i>En menos de un mes, me asesoraron, invertí, y me arrendaron el departamento<br><br><i class="signature">Javiera</i></p>
+        <p><i class="quote left big icon"></i>Llevaba meses buscando el departamento ideal y lo conseguí con las mejores condiciones<br><br><i class="signature">Gabriela</i></p>
+        <p><i class="quote left big icon"></i>Me mostraron mis alternativas y con la confianza del equipo de InveriuS me atrví a invertir<br><br><i class="signature">Camilo</i></p>
       </div>
     </div>
   </div>
@@ -220,33 +219,47 @@
 <div class="ui fluid container" id="projects_container">
   <div class="ui fluid container items-holder">
     <div class="ui container items-container">
-      <div class="ui special four stackable cards">
-        <% @projects.each do |project| %>
-          <div class="card">
-            <div class="blurring dimmable image">
-              <div class="ui dimmer">
+        <div class="ui container items-left">
+          <h1 class="ui mini inverted header">
+              <div class="content title">
+              Conoce nuestros proyectos
+              </div>
+              <div class="sub header text">
+                <i>Descubre nuestra gran variedad para invertir</i>
+              </div>
+            </h1>
+        </div>
+        <div class="ui container items-right">
+          <div class="ui special two stackable cards">
+            <% @projects.each do |project| %>
+              <div class="card">
+                <div class="blurring dimmable image">
+                  <div class="ui dimmer">
+                    <div class="content">
+                      <div class="center">
+                        <%= link_to 'Ver Proyecto', project, class: "ui inverted button" %>
+                      </div>
+                    </div>
+                  </div>
+                  <img src="<%= project.image_url %>">
+                </div>
                 <div class="content">
-                  <div class="center">
-                    <%= link_to 'Ver Proyecto', project, class: "ui inverted button" %>
+                  <div class="header"><%= project.name %></div>
+                  <div class="meta">
+                    <span class="date"><%= project.due_date %></span>
                   </div>
                 </div>
+                <div class="extra content">
+                  <i class="building icon"></i>
+                  <%= project.stage %>
+                </div>
               </div>
-              <img src="<%= project.image_url %>">
-            </div>
-            <div class="content">
-              <div class="header"><%= project.name %></div>
-              <div class="meta">
-                <span class="date"><%= project.due_date %></span>
-              </div>
-            </div>
-            <div class="extra content">
-              <i class="building icon"></i>
-              <%= project.stage %>
-            </div>
+            <% end %>
+            <button class="ui big white inverted button" style="height: 10%; margin-top: 20%; margin-left: 16%;">Ver más</button>
           </div>
-        <% end %>
+
+        </div>
       </div>
-    </div>
   </div>
 </div>
 <!-- PROJECTS CONTAINER -->
