--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -147,52 +147,44 @@
   <div class="ui fluid container items-holder">
     <div class="ui container items-container">
       <div class="items-center" id="statistics">
-        <div class="ui huge statistic">
+        <div class="ui big statistic">
           <div class="value">
-            22
+            100%
           </div>
           <div class="label">
-            Proyectos
+            De nuestros clientes<br>nos recomiendan
           </div>
         </div>
-        <div class="ui huge statistic">
+        <div class="ui big statistic">
           <div class="value">
             1000+
           </div>
           <div class="label">
-            Inversores
+            Departamentos<br>en stock
           </div>
         </div>
-        <div class="ui huge statistic">
+        <div class="ui big statistic">
           <div class="value">
-            10
+            70%+
           </div>
           <div class="label">
-            Premios
+            Ha decidido<br>reinvertir con nosotros
           </div>
         </div>
-        <div class="ui huge statistic">
+        <div class="ui big statistic">
           <div class="value">
-            12
+            500 mil+
           </div>
           <div class="label">
-            Especialistas
+            UF vendidas
           </div>
         </div>
-        <div class="ui huge statistic">
+        <div class="ui big statistic">
           <div class="value">
-            10
+            100%
           </div>
           <div class="label">
-            Años de experiencia
-          </div>
-        </div>
-        <div class="ui huge statistic">
-          <div class="value">
-            1
-          </div>
-          <div class="label">
-            Felipón
+            De nuestro equipo<br>es experto
           </div>
         </div>
       </div>
@@ -255,7 +247,7 @@
                 </div>
               </div>
             <% end %>
-            <button class="ui big white inverted button" style="height: 10%; margin-top: 20%; margin-left: 16%;">Ver más</button>
+            <button class="ui big white inverted button" style="height: 10%; margin-top: 22%; margin-left: 16%;">Ver más</button>
           </div>
 
         </div>
@@ -318,7 +310,7 @@
     autoplay: true,
     autoplaySpeed: 7500,
     // infinite: true,
-    speed: 1000,
+    speed: 2000,
     fade: true,
     pauseOnFocus: false,
     pauseOnHover: false
