--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -102,7 +102,7 @@
 }
 
 #mission_container {
-  background-image: url(windshield-blurred.jpg);
+  background-image: url(street-blurred.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
