--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,6 +16,11 @@
  */
 @import "semantic-ui";
 
+body {
+  background: url(asset-path('landscape.jpg')) no-repeat;
+  background-size: cover;
+}
+
 #menu_header {
   background-color: rgba(0,0,0,0.6);
 }
