Revert "New prospect form redesign"

--- a/app/views/prospects/_form.html.erb
+++ b/app/views/prospects/_form.html.erb
@@ -58,7 +58,7 @@
     </div>
   </div>
 
-  <button class="ui primary button" type="submit">Enviar</button>
+  <button class="ui button" type="submit">Enviar</button>
 <% end %>
 
 
