--- a/app/assets/stylesheets/prospects.scss
+++ b/app/assets/stylesheets/prospects.scss
@@ -3,30 +3,10 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .form-container {
-    margin-left: 25%;
-    margin-right: 25%;
-	padding-top: 50px;
+	width: 40%;
+	margin-left: 30%;
+	padding-top: 100px;
 }
-
 .negative a:hover {
 	background-color: #ffe7e7 !important;
-}
-
-.ui.form {
-    padding: 3% 4%;
-    background-color: rgba(255, 255, 255, 0.6);
-    margin-bottom: 10px;
-}
-
-.ui.header {
-    margin: 15px!important;
-
-    .title {
-        color: rgba(0, 0, 0, 0.7);
-        font-size: 2.75em!important;
-    }
-}
-
-.ui.message {
-    margin-top: 25px!important;
 }
