fix prospect form style

--- a/app/assets/stylesheets/prospects.scss
+++ b/app/assets/stylesheets/prospects.scss
@@ -18,7 +18,7 @@
     margin-bottom: 10px;
 }
 
-.ui.header {
+.form-container .ui.header {
     margin: 15px!important;
 
     .title {
@@ -27,6 +27,6 @@
     }
 }
 
-.ui.message {
+.form-container .ui.message {
     margin-top: 25px!important;
 }
