--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -200,7 +200,7 @@
       <div class="ui basic segment items-center" id="quotes">
         <p><i class="quote left big icon"></i>En menos de un mes, me asesoraron, invertí, y me arrendaron el departamento<br><br><i class="signature">Javiera</i></p>
         <p><i class="quote left big icon"></i>Llevaba meses buscando el departamento ideal y lo conseguí con las mejores condiciones<br><br><i class="signature">Gabriela</i></p>
-        <p><i class="quote left big icon"></i>Me mostraron mis alternativas y con la confianza del equipo de InveriuS me atrví a invertir<br><br><i class="signature">Camilo</i></p>
+        <p><i class="quote left big icon"></i>Me mostraron mis alternativas y con la confianza del equipo de InveriuS me atreví a invertir<br><br><i class="signature">Camilo</i></p>
       </div>
     </div>
   </div>
